--- a/README.Rmd
+++ b/README.Rmd
@@ -10,16 +10,15 @@ title: "brocot"
 ```{r, echo=FALSE}
 num_samples  = 1000
 num_bins     = 101
-sigma_x_max  = 1/(4*pi)
 slit_width   = 2
 
 dx           = 1/num_samples
 min_x        = 2*dx
 max_x        = slit_width - 2*dx
 x_real       = seq(from=min_x, to=max_x, by=dx)
-sigma_x_lt   = pmin(x_real - min_x + dx, sigma_x_max)
-sigma_x_gt   = pmin(max_x - x_real + dx, sigma_x_max)
-x = coprimer::stern_brocot(x_real, sigma_x_lt, sigma_x_gt)
+sigma_x_lt   = x_real - min_x
+sigma_x_gt   = max_x - x_real
+x = coprimer::nearby_coprime(x_real, sigma_x_lt, sigma_x_gt)
 ```
 
 ```{r, echo=FALSE}
