--- a/README.Rmd
+++ b/README.Rmd
@@ -3,6 +3,10 @@ output: github_document
 title: "brocot"
 ---
 
+```{r, echo=F}
+devtools::load_all(".")
+```
+
 ![](man/figures/brocot_logo.png){ width=120px align=right }
 
 `brocot` is an R package for exploring physics with coprime fractions.
@@ -20,50 +24,64 @@ sigma_x_lt   = x_real - min_x + dx
 sigma_x_gt   = max_x - x_real + dx
 x = coprimer::nearby_coprime(x_real, sigma_x_lt, sigma_x_gt)
 
-sigma_p_gt   = 1 / sigma_x_gt
 sigma_p_lt   = 1 / sigma_x_lt
+sigma_p_gt   = 1 / sigma_x_gt
 p_real       = sigma_p_gt - sigma_p_lt
 p = coprimer::nearby_coprime(p_real, sigma_p_lt, sigma_p_gt)
-x$approximation = x$approximation + p$approximation
 ```
 
-```{r, echo=FALSE}
-ggplot2::ggplot(data.frame(approximation = x$approximation), ggplot2::aes(x = approximation)) +
-  ggplot2::geom_histogram(bins = num_bins, fill = "black") +
-  ggplot2::labs(title = "Histogram of Stern-Brocot Rational Numbers", x = "Rational Number", y = "Count") +
-  ggplot2::theme_minimal()
-```
+## Position vs Momentum
+
+## Position vs Momentum
 
 ```{r, echo=FALSE}
-ggplot2::ggplot(data.frame(approximation = x$approximation, thomae = x$thomae),
-                ggplot2::aes(x = approximation, y = thomae)) +
-  ggplot2::geom_segment(ggplot2::aes(xend = approximation, y = 0, yend = thomae), color = "black") +
-  ggplot2::labs(title = "Thomae's Function of Stern-Brocot Approximations", x = "Approximation", y = "Thomae") +
-  ggplot2::theme_minimal()
+plot_scatter(
+  data = data.frame(x = x$approximation, p = p$approximation),
+  x_col = "x",
+  y_col = "p",
+  title = "Position vs Momentum",
+  x_label = "x",
+  y_label = "p"
+)
+
+plot_scatter(
+  data = data.frame(x = x$thomae, p = p$thomae),
+  x_col = "x",
+  y_col = "p",
+  title = "Thomae Position vs Momentum",
+  x_label = "x",
+  y_label = "p"
+)
+
+plot_scatter(
+  data = data.frame(x = x$euclids_orchard_height, p = p$euclids_orchard_height),
+  x_col = "x",
+  y_col = "p",
+  title = "Euclid Position vs Momentum",
+  x_label = "x",
+  y_label = "p"
+)
+
 ```
 
-```{r, echo=FALSE}
-ggplot2::ggplot(data.frame(approximation = x$approximation, euclid = x$euclids_orchard_height),
-                ggplot2::aes(x = approximation, y = euclid)) +
-  ggplot2::geom_segment(ggplot2::aes(xend = approximation, y = 0, yend = euclid), color = "black") +
-  ggplot2::labs(title = "Euclid's Orchard of Stern-Brocot Approximations", x = "Approximation", y = "Redundancy") +
-  ggplot2::theme_minimal()
-```
+## Position
 
 ```{r, echo=FALSE}
-ggplot2::ggplot(data.frame(error = x$error), ggplot2::aes(x = error)) +
-  ggplot2::geom_histogram(bins = num_bins, fill = "black") +
-  ggplot2::labs(title = "Histogram of Stern-Brocot Errors", x = "Error", y = "Count") +
-  ggplot2::theme_minimal()
+# Generate plots for Position (x)
+plot_histogram(x, num_bins, "approximation", "Histogram of Position", "Rational Number")
+plot_segments(x, "approximation", "thomae", "Thomae's Function of Position", "Approximation", "Thomae")
+plot_segments(x, "approximation", "euclids_orchard_height", "Euclid's Orchard of Position", "Approximation", "Redundancy")
+plot_histogram(x, num_bins, "error", "Histogram of Position Errors", "Error")
+plot_scatter(x, "approximation", "depth", "Stern-Brocot Depth vs. Position", "Approximation", "Depth")
 ```
 
+## Momentum
+
 ```{r, echo=FALSE}
-ggplot2::ggplot(data.frame(approximation = x$approximation, depth = x$depth),
-                ggplot2::aes(x = approximation, y = depth)) +
-  ggplot2::geom_point(alpha = 0.5, color = "black") +  # Scatter plot with transparency
-  ggplot2::labs(title = "Stern-Brocot Depth vs. Approximation",
-                x = "Approximation", y = "Depth") +
-  ggplot2::theme_minimal() +
-  ggplot2::scale_x_continuous(breaks = scales::pretty_breaks(n = 10), labels = scales::label_number()) +
-  ggplot2::scale_y_continuous(breaks = scales::pretty_breaks(n = 10), labels = scales::label_number())
+# Generate plots for Momentum (p)
+plot_histogram(p, num_bins, "approximation", "Histogram of Momentum", "Rational Number")
+plot_segments(p, "approximation", "thomae", "Thomae's Function of Momentum", "Approximation", "Thomae")
+plot_segments(p, "approximation", "euclids_orchard_height", "Euclid's Orchard of Momentum", "Approximation", "Redundancy")
+plot_histogram(p, num_bins, "error", "Histogram of Momentum Errors", "Error")
+plot_scatter(p, "approximation", "depth", "Stern-Brocot Depth vs. Momentum", "Approximation", "Depth")
 ```
