round trip x to p to x

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,32 +32,12 @@ p = coprimer::nearby_coprime(p_real, sigma_p_lt, sigma_p_gt)
 
 ## Position vs Momentum
 
-## Position vs Momentum
-
 ```{r, echo=FALSE}
 plot_scatter(
   data = data.frame(x = x$approximation, p = p$approximation),
   x_col = "x",
   y_col = "p",
   title = "Position vs Momentum",
-  x_label = "x",
-  y_label = "p"
-)
-
-plot_scatter(
-  data = data.frame(x = x$thomae, p = p$thomae),
-  x_col = "x",
-  y_col = "p",
-  title = "Thomae Position vs Momentum",
-  x_label = "x",
-  y_label = "p"
-)
-
-plot_scatter(
-  data = data.frame(x = x$euclids_orchard_height, p = p$euclids_orchard_height),
-  x_col = "x",
-  y_col = "p",
-  title = "Euclid Position vs Momentum",
   x_label = "x",
   y_label = "p"
 )
@@ -85,3 +65,41 @@ plot_segments(p, "approximation", "euclids_orchard_height", "Euclid's Orchard of
 plot_histogram(p, num_bins, "error", "Histogram of Momentum Errors", "Error")
 plot_scatter(p, "approximation", "depth", "Stern-Brocot Depth vs. Momentum", "Approximation", "Depth")
 ```
+
+## From Position to Momentum to Position
+
+```{r, echo=T}
+num_samples  = 5
+num_bins     = 5
+slit_width   = 17
+
+dx           = slit_width/num_samples
+min_x        = -slit_width / 2 + dx
+max_x        =  slit_width / 2 - dx
+x_real       = seq(from=min_x, to=max_x, by=dx)
+sigma_x_lt   = x_real - min_x + dx
+sigma_x_gt   = max_x - x_real + dx
+x = coprimer::nearby_coprime(x_real, sigma_x_lt, sigma_x_gt)
+print(x)
+```
+
+```{r, echo=T}
+sigma_p_lt   = 1 / sigma_x_lt
+sigma_p_gt   = 1 / sigma_x_gt
+p_real       = sigma_p_gt - sigma_p_lt
+p = coprimer::nearby_coprime(p_real, sigma_p_lt, sigma_p_gt)
+print(p)
+```
+
+```{r, echo=T}
+sigma_x_conj_lt = 1 / sigma_p_lt
+sigma_x_conj_gt = 1 / sigma_p_gt
+x_conj_real     = (sigma_x_conj_lt - sigma_x_conj_gt) / 2
+x_conj          = coprimer::nearby_coprime(x_conj_real, sigma_x_conj_lt, sigma_x_conj_gt)
+print(x_conj)
+```
+
+```{r, echo=T}
+print(x == x_conj)
+```
+
